--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "jirash",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "a JIRA CLI tool for Trent and friends",
   "main": "./lib/index.js",
+  "bin": {
+    "jirash": "./bin/jirash"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trentm/jirash.git"
