--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jirash",
   "version": "2.1.1",
-  "description": "a JIRA CLI tool for Trent and friends",
+  "description": "a JIRA CLI",
   "main": "./lib/index.js",
   "bin": {
     "jirash": "./bin/jirash"
@@ -24,6 +24,7 @@
     "assert-plus": "^1.0.0",
     "bunyan": "^1.8.12",
     "cmdln": "^4.3.0",
+    "read": "^1.0.7",
     "restify-clients": "^1.5.2",
     "tabula": "^1.9.0",
     "vasync": "^2.1.0",
