--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "tabula": "^1.9.0",
     "vasync": "^2.1.0",
     "verror": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "2.x",
+    "eslint-plugin-joyent": "1.x"
   }
 }
