--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "eslint": "2.x",
-    "eslint-plugin-joyent": "1.x"
+    "eslint-plugin-joyent": "1.x",
+    "prettier": "1.9.1"
   }
 }
