--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jirash",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "a JIRA CLI",
   "main": "./lib/index.js",
   "bin": {
@@ -24,6 +24,7 @@
     "assert-plus": "^1.0.0",
     "bunyan": "^1.8.12",
     "cmdln": "^4.3.0",
+    "lomstream": "1.1.0",
     "read": "^1.0.7",
     "restify-clients": "^1.5.2",
     "tabula": "^1.9.0",
