use "files" in package.json for more explicit published files
E.g. this now excludes some unnecessary files like:

    package/.npmignore   (generated by npm pack?)
    package/TODO.md
    package/Makefile
    package/.eslintrc
    package/jirash-31-review.patch  (extra file that was kicking around)
    package/.prettierrc
    package/tools/pre-commit.sh

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "url": "https://github.com/trentm/jirash/issues"
   },
   "homepage": "https://github.com/trentm/jirash",
+  "files": [
+    "lib",
+    "bin",
+    "etc"
+  ],
   "dependencies": {
     "assert-plus": "^1.0.0",
     "bunyan": "^1.8.12",
