*should* only need github CI actions on pushes and PRs against 'master'

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,9 @@
 name: Check Lint & Style
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   check:
     runs-on: ubuntu-latest
